{
[eval]:1
const pool = require('./src/config/db'); pool.query('SELECT * FROM kelas ORDER BY tingkat, nama_kelas').then(r = console.log('OK:', r.rows.length, 'rows'); process.exit(0); }).catch(e = console.log('ERROR:', e.message); process.exit(1); }); setTimeout(() = console.log('TIMEOUT'); process.exit(1); }, 5000);
                                                                                                                                                         ^

SyntaxError: missing ) after argument list
[90m    at makeContextifyScript (node:internal/vm:185:14)[39m
[90m    at node:internal/process/execution:107:22[39m
    at [eval]-wrapper:6:24
[90m    at runScript (node:internal/process/execution:101:62)[39m
[90m    at evalScript (node:internal/process/execution:133:3)[39m
[90m    at node:internal/main/eval_string:51:3[39m

Node.js v20.20.2
